# code-accelerator-python

./: .gitignore  README.md  main.py  pyproject.toml
.circleci/: config.yml
deployments/: Dockerfile  docker-compose.yml  entrypoint.sh
src/com/everestek/accelerator/evhub/: security_api.py
src/com/everestek/accelerator/evhub/api/: books_api.py  books_api_base.py  management_api.py
src/com/everestek/accelerator/evhub/dto/: book.py  error.py
src/com/everestek/accelerator/evhub/impl/: management_api_impl.py
src/com/everestek/evhub/accelerator/: security_api.py
src/com/everestek/evhub/accelerator/api/: management_api.py  management_api_base.py
src/com/everestek/evhub/accelerator/impl/: management_api_impl.py
test/com/everestek/accelerator/evhub/api/: test_books_api.py
test/com/everestek/accelerator/evhub/dto/: test_book.py  test_error.py
test/com/everestek/evhub/accelerator/api/: test_management_api.py
test/com/everestek/evhub/accelerator/commons/: test_data_generator.py
