[tool.poetry]
name = "accelerator"
version = "0.1.0"
description = "A Python project using Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
uvicorn = "0.34.0"
fastapi = "0.115.12"
toml = "0.10.2"
httpx = "0.28.1"
python-dateutil = "2.9.0.post0"
urllib3 = "2.3.0"
typing-extensions = "4.13.1"
pydantic = "2.11.2"
gunicorn = "23.0.0"


[tool.poetry.group.dev.dependencies]
pylint = ">=3.1.0,<4.0.0"
black = ">=23.3.0,<24.0.0"
dependency-check = ">=0.6.0,<1.0.0"
python-multipart = ">=0.0.6,<0.0.8"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0,<8.0.0"
pytest-html = ">=4.1.0,<5.0.0"
coverage = ">=7.2.0,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
